# BLADE

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  EoHrun.jsonl  README.md  RELEASE_NOTES_v1.0.0.md  data.csv  diversity-analysis.ipynb  diversity_benchmark.py  example.py  final_validation.ipynb  pyproject.toml  run-benchdesign.py  run-mabbob.py  run-sbox.py  run_archive_guided-2-1.py  run_archive_guided-2-2.py  run_archive_guided-2.py  run_archive_guided-3.py  run_archive_guided.py  run_diversity-2.py  run_diversity-3.py  run_diversity-4.py  run_diversity.py  run_rule_driven1.py  run_rule_driven2.py  store_optimum.py  visualize_1.ipynb  visualize_2.ipynb  visualize_3.ipynb  visualize_automl.ipynb  visualize_kerneltuner.ipynb  visualize_mabbob.ipynb  visualize_sbox.ipynb  webapp.py
blade/: __init__.py  experiment.py  llm.py  loggers.py  method.py  plots.py  problem.py  utils.py
docs/: Installation.rst  Quickstart.rst  benchmarks.rst  conf.py  experiment.rst  fitness.rst  index.rst  llm.rst  loggers.rst  method.rst  modules.rst  problem.rst  solution.rst  utils.rst  webapp.rst
examples/: auto-correlation-1.py  auto-correlation.py  ela_scaler.joblib  enhance_logs.py  minimal_example.py  minimal_example_trackio.py  process_bbob_runs.py  run-automl.py  run-bbob-logging.py  run-bo-exp.py  run-kerneltuner-info.py  run-kerneltuner.py  run-mabbob.py  run-min-max-distance-ratio-mcts.py  run-sbox.py  test-kerneltuner.json  visualize_BOy.ipynb  visualize_ELA.ipynb  visualize_bbob.ipynb  visualize_bbob.py  visualize_kerneltuner.ipynb  visualize_mabbob.ipynb  visualize_mabbob_guided.ipynb  visualize_rule_driven.ipynb  visualize_sbox_xai.ipynb  visualize_sbox_xai2.ipynb  visualize_sbox_xai3.ipynb
iohblade/: __init__.py  behaviour_metrics.py  experiment.py  fitness.py  llm.py  loggers.py  mcts_node.py  method.py  plots.py  problem.py  solution.py  tags.py  utils.py  webapp.py
kerneltuner-results/: alg-convolution-LLaMEA-o4-mini.py  alg-convolution-no-info-LLaMEA-o4-mini.py  alg-dedispersion-LLaMEA-o4-mini.py  alg-dedispersion-no-info-LLaMEA-o4-mini.py  alg-gemm-LLaMEA-o4-mini.py  alg-gemm-no-info-LLaMEA-o4-mini.py  alg-hotspot-LLaMEA-o4-mini.py  alg-hotspot-no-info-LLaMEA-o4-mini.py
run_benchmarks/: auto-correlation.py  circle_packing.py  cvrp.py  erdos-min-overlap.py  tsp.py  (+10 more)
(+236 files in other folders)
